kube/monolognator.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: monolognator
  name: monolognator
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/port: '6060'
        prometheus.io/scrape: 'true'
      labels:
        app: monolognator
    spec:
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: config
          configMap:
            name: config
        - name: twitter-filters
          configMap:
            name: twitter-filters
      containers:
      - image: gcr.io/peppy-house-263912/monolognator 
      # - image: registry.hub.docker.com/jambock/monolognator
        imagePullPolicy: Always
        name: monolognator
        resources:
          limits:
            cpu: "100m"
        ports:
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - mountPath: /app/config.json
            subPath: config.json
            name: config
          - mountPath: /app/filters.yml
            subPath: filters.yml
            name: twitter-filters
      - image: nginx
        name: nginx
        resources:
          limits:
            cpu: "100m"
        ports:
          - containerPort: 80
            protocol: TCP
        volumeMounts:
          - mountPath: /etc/nginx
            readOnly: true
            name: nginx-conf
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
      restartPolicy: Always
      serviceAccountName: monolognator
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monolognator
  name: monolognator
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: monolognator
  sessionAffinity: None
  type: NodePort
