kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monolognator 
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  tls:
    - secretName: certificate-fullchain
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: monolognator
              servicePort: 80
